fixed broken layout (board was displaying over active player)

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html, body {
 .container {
     width: 90vw;
     display: grid;
-    grid-template-columns: minmax(150px, 300px) minmax(300px, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: minmax(150px, 1fr) minmax(300px, 2fr);
+    grid-template-rows: repeat(2, auto);
     margin: 25px auto;
     justify-content: center;
     align-items: center;
@@ -33,12 +33,13 @@ h1 {
     width: 100%;
     margin: 0 auto;
     background-color: #eee;
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
+    font-size: 24px;
 }
 #player-data {
-    grid-column: 0 / 1;
-    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
     display: flex;
     flex-direction: column;
     border-radius: 12px;
@@ -66,10 +67,11 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     height: 50%;
     width: 80%;
+    font-size: clamp(14px, 2vw, 4vw);
 }
 
 #active-player {
-
+    height: auto;
     width: 100%;
     background-color: #eee;
     grid-column: 2 / 3;
@@ -90,6 +92,8 @@ h1 {
     font-family: "Rubik Spray Paint", system-ui;
     font-weight: 400;
     font-style: normal;
+    grid-row: 3 / 4;
+    grid-column: 2 / 4;
 }
 
 #board div {
